Bug 163634 - When entering a new list item in Impress 24.8 the bullets do not obey paragraph spacing
Summary: When entering a new list item in Impress 24.8 the bullets do not obey paragra...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.8.0 target:25.2.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Impress-Bullet-Number
  Show dependency treegraph
 
Reported: 2024-10-26 12:45 UTC by Rafael Lima
Modified: 2026-01-12 16:46 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2024-10-26 12:45:12 UTC
In Impress 24.8 a bug appeared while editing lists. When a new item is entered, the bullet initially does not respect the paragraph spacing. This did not happen in 24.2.

Steps to reproduce
1) Create a blank Impress document
2) Change the slide layout to "Title, Content"
3) In the "content" area type "Text"
4) Press Enter... notice where the bullet is
5) Now write "Text" again
6) Notice the bullet moving to the right place only after entering text

Expected results
The bullet should initially be in the right place

Marking as a possible regression because this issue did not happen in 24.2.

System info

Version: 24.8.2.1 (X86_64) / LibreOffice Community
Build ID: 480(Build:1)
CPU threads: 16; OS: Linux 6.11; UI render: default; VCL: kf6 (cairo+wayland)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 4:24.8.2-0ubuntu1
Calc: threaded
Comment 1 mkt 2024-11-06 06:21:23 UTC
Hi,

I could reproduce and observed this in version:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ce4ae4f082d8fe80da242836c57d55a456eac5e0
CPU threads: 2; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 2 raal 2024-11-06 20:05:21 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.8.
Adding Cc: to Tomaž Vajngerl ; Could you possibly take a look at this one?
Thanks
 52abeff6d5836b29dbefe69f284bbd89f6672ae2 is the first bad commit
commit 52abeff6d5836b29dbefe69f284bbd89f6672ae2
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Wed Apr 3 04:32:44 2024 +0200

    source f61ea135430d7b4a1fac7de1e57a1314fbb1b49e

165441: editeng: use text scaling that better mimics MSO text scaling | https://gerrit.libreoffice.org/c/core/+/165441
Comment 3 Buovjaga 2024-12-08 08:47:18 UTC
*** Bug 163206 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2024-12-11 15:11:00 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fdb13df0cb759e65e48bb65b1513e8add429d4d6

tdf#163634 Format empty paragraph if they have a bullet/numbering

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Mihai Vasiliu 2024-12-12 21:36:06 UTC
Can confirm this is fixed in

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a5149eadb23825a9fb5beeda81836ad7940c3083
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: CL threaded
Comment 6 Commit Notification 2024-12-18 21:55:48 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/054c2946a130a1acea91140f4e7c3e4a0f93a170

tdf#163634 Format empty paragraph if they have a bullet/numbering

It will be available in 25.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-01-28 10:32:05 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/2462064fc3e7d82141470a2ce51998c4f5d2364d

tdf#163634 Format empty paragraph if they have a bullet/numbering

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-03-27 21:34:30 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/80e7e76b25881ca500c51ee91cfba3687a49b1f6

tdf#165329 Improve fix of tdf#163634

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-03-27 23:39:47 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/e05a88184c0f3a71a3f0c72b9ec9ac1fc1a3ab88

tdf#165329 Improve fix of tdf#163634

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.